@@ -1,3 +1,21 @@
+/*
+ * Licensed to Elasticsearch under one or more contributor
+ * license agreements. See the NOTICE file distributed with
+ * this work for additional information regarding copyright
+ * ownership. Elasticsearch licenses this file to you under
+ * the Apache License, Version 2.0 (the "License"); you may
+ * not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *    http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+ */
 package org.elasticsearch.transport;
 
 import org.elasticsearch.Version;
@@ -8,9 +26,7 @@ import java.io.Closeable;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
 import java.util.concurrent.atomic.AtomicLong;
 
 public class RemoteConnectionManager implements Closeable {
@@ -23,34 +39,23 @@ public class RemoteConnectionManager implements Closeable {
     RemoteConnectionManager(String clusterAlias, ConnectionManager connectionManager) {
         this.clusterAlias = clusterAlias;
         this.connectionManager = connectionManager;
+        this.connectionManager.addListener(new TransportConnectionListener() {
+            @Override
+            public void onNodeConnected(DiscoveryNode node, Transport.Connection connection) {
+                addConnection(connection);
+            }
+
+            @Override
+            public void onNodeDisconnected(DiscoveryNode node, Transport.Connection connection) {
+                removeConnection(connection);
+            }
+        });
     }
 
     public void connectToNode(DiscoveryNode node, ConnectionProfile connectionProfile,
                               ConnectionManager.ConnectionValidator connectionValidator,
                               ActionListener<Void> listener) throws ConnectTransportException {
-        connectionManager.connectToNode(node, connectionProfile, connectionValidator, new ActionListener<>() {
-            @Override
-            public void onResponse(Void v) {
-                try {
-                    // TODO: Propagate the connection to the listener
-                    Transport.Connection newConnection = connectionManager.getConnection(node);
-                    addConnection(newConnection);
-                    newConnection.addCloseListener(ActionListener.wrap(() -> removeConnection(newConnection)));
-                    listener.onResponse(v);
-                } catch (NodeNotConnectedException e) {
-                    listener.onFailure(e);
-                }
-            }
-
-            @Override
-            public void onFailure(Exception e) {
-                listener.onFailure(e);
-            }
-        });
-    }
-
-    public boolean nodeConnected(DiscoveryNode node) {
-        return connectionManager.nodeConnected(node);
+        connectionManager.connectToNode(node, connectionProfile, connectionValidator, listener);
     }
 
     public void openConnection(DiscoveryNode node, ConnectionProfile profile, ActionListener<Transport.Connection> listener) {
@@ -89,18 +94,20 @@ public class RemoteConnectionManager implements Closeable {
     }
 
     private synchronized void addConnection(Transport.Connection addedConnection) {
-        Set<Transport.Connection> newConnections = new HashSet<>(this.connections);
+        ArrayList<Transport.Connection> newConnections = new ArrayList<>(this.connections);
         newConnections.add(addedConnection);
-        this.connections = List.copyOf(newConnections);
+        this.connections = Collections.unmodifiableList(newConnections);
     }
 
     private synchronized void removeConnection(Transport.Connection removedConnection) {
-        ArrayList<Transport.Connection> newConnections = new ArrayList<>(this.connections.size());
+        int newSize = this.connections.size() - 1;
+        ArrayList<Transport.Connection> newConnections = new ArrayList<>(newSize);
         for (Transport.Connection connection : this.connections) {
             if (connection.equals(removedConnection) == false) {
                 newConnections.add(connection);
             }
         }
+        assert newConnections.size() == newSize : "Expected connection count: " + newSize + ", Found: " + newConnections.size();
         this.connections = Collections.unmodifiableList(newConnections);
     }
 
